force-app/main/default/objects/Invoice__c/fields/Most_Recent_Payment_Day__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payment_Day__c</fullName>
    <label>Most Recent Payment Day</label>
    <type>Date</type>
</CustomField>