force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Lines__c</fullName>
    <label>Total Invoice Lines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>